# pace-platform

./: .env.example  .gitignore  SECURITY.md  eslint.config.mjs  jest.config.js  jest.config.ts  middleware.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts
pace-cv-engine/: .env.example  .gitignore  Dockerfile  Dockerfile.biomechanics  Makefile  biomechanics_main.py  models.py  pyproject.toml  requirements.biomechanics.txt  requirements.txt
pace-cv-engine/app/: __init__.py  main.py  worker.py
pace-cv-engine/app/core/: config.py  logging.py
pace-cv-engine/app/models/: cv_job.py
pace-cv-engine/app/services/: face_masker.py  job_processor.py  pose_estimator.py  s3_service.py  sqs_consumer.py
pace-cv-engine/backtest/: __init__.py  ekf_engine.py  etl.py  evaluator.py  ode_engine.py  requirements.txt  run_backtest.py  test_backtest.py
pace-cv-engine/backtest/results/: athlete_stats.csv  backtest_evaluation.json  backtest_report.txt  backtest_results.csv
pace-cv-engine/biomechanics/: __init__.py  neuromotor_noise.py  pipeline.py  preprocessing.py  requirements.txt  structural_vulnerability.py  test_biomechanics.py
pace-cv-engine/deploy/cloudrun/: service.yaml
pace-cv-engine/deploy/ecs/: task-definition.json
pace-cv-engine/deploy/lambda/: template.yaml
pace-cv-engine/deploy/runpod/: runpod_config.yaml  (+1 more)
pace-cv-engine/engines/: __init__.py  ekf_engine.py  ode_engine.py
pace-cv-engine/scripts/: gpu_verify.py
pace-cv-engine/tests/: test_ekf.py  test_ode.py  test_pose_estimator.py
(+896 files in other folders)
